# companio-cc

./: README.md  pyproject.toml
companio/: cli.py  heartbeat.py  helpers.py
companio/core/: __init__.py  claude_cli.py  context.py  loop.py  memory.py
companio/tools/: cron_tool.py  message.py
companiocc/: __init__.py  __main__.py  bus.py  cli.py  cron.py  helpers.py  session.py
companiocc/channels/: __init__.py  base.py  manager.py  telegram.py
companiocc/config/: __init__.py  loader.py  paths.py  schema.py
companiocc/core/: __init__.py  claude_cli.py  context.py  loop.py  memory.py
companiocc/templates/: .env.example  AGENTS.md  HEARTBEAT.md  SOUL.md  TOOLS.md  USER.md  config.example.json
companiocc/templates/memory/: MEMORY.md
companiocc/tools/: cron_tool.py  message.py
tests/: test_agent_core.py  test_channels.py  test_claude_cli.py  test_config.py  test_cron_heartbeat.py  test_helpers.py  test_session_sqlite.py
