[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "companio"
version = "0.1.0"
description = "Lightweight personal AI assistant framework"
requires-python = ">=3.11"
license = "MIT"
dependencies = [
    "pydantic>=2.12.0,<3.0.0",
    "pydantic-settings>=2.12.0,<3.0.0",
    "typer>=0.20.0,<1.0.0",
    "rich>=14.0.0,<15.0.0",
    "loguru>=0.7.3,<1.0.0",
    "croniter>=6.0.0,<7.0.0",
    "json-repair>=0.57.0,<1.0.0",
    "prompt-toolkit>=3.0.50,<4.0.0",
    "aiosqlite>=0.20.0,<1.0.0",
    "python-dotenv>=1.0.0,<2.0.0",
    "python-telegram-bot[socks]>=22.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.8.0",
    "mypy>=1.13",
    "coverage>=7.0",
]

[project.scripts]
companio = "companio.cli:app"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
strict = false
warn_return_any = true
warn_unused_configs = true
